[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/PauseController.gd" type="Script" id=1]
[ext_resource path="res://ui/PTSans-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[node name="PauseController" type="Node"]
script = ExtResource( 1 )

[node name="MainMenu" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -200.0
margin_bottom = -60.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_right = 964.0
margin_bottom = 140.0

[node name="PlayButton" type="MenuButton" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 88.0
margin_bottom = 61.0
focus_mode = 2
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Play"
align = 0

[node name="PauseMenu" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -200.0
margin_bottom = -60.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
margin_right = 964.0
margin_bottom = 140.0

[node name="ContinueButton" type="MenuButton" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_right = 174.0
margin_bottom = 61.0
focus_mode = 2
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 0

[node name="QuitButton" type="MenuButton" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 89.0
margin_bottom = 126.0
focus_mode = 2
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 0

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
